--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 ---
-layout: default
+layout: null
 ---
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; URL=/jp/">
+    <link rel="canonical" href="/jp/">
+</head>
+<body>
+    <p>Redirecting to <a href="/jp/">Japanese version</a>...</p>
+</body>
+</html>
