Fix URL paths for GitHub Pages with repository name and enable language switching

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: null
 <head>
     <meta charset="utf-8">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; URL=/jp/">
-    <link rel="canonical" href="/jp/">
+    <meta http-equiv="refresh" content="0; URL={{ site.baseurl }}/jp/">
+    <link rel="canonical" href="{{ site.baseurl }}/jp/">
 </head>
 <body>
-    <p>Redirecting to <a href="/jp/">Japanese version</a>...</p>
+    <p>Redirecting to <a href="{{ site.baseurl }}/jp/">Japanese version</a>...</p>
 </body>
 </html>
